--- a/platform/init.properties
+++ b/platform/init.properties
@@ -16,7 +16,7 @@ postgresql.passWord = 678789
 
 # 使用mysql数据库
 mysql.driverClass = com.mysql.jdbc.Driver
-mysql.jdbcUrl = jdbc:mysql://127.0.0.1:3306/jfinaluib?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+mysql.jdbcUrl = jdbc:mysql://127.0.0.1:3306/jxtest?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 mysql.userName = root
 mysql.passWord = jn1535
 
@@ -76,7 +76,7 @@ config.maxAge = 12960000
 config.session = 30
 
 #域名或者服务器IP，多个逗号隔开，验证Referer时使用
-config.domain = 127.0.0.1, localhost, www.4bu4.com
+config.domain =
 
 #邮件发送配置
 config.mail.host = smtp.163.com
