--- a/platform/init.properties
+++ b/platform/init.properties
@@ -16,9 +16,9 @@ postgresql.passWord = 678789
 
 # 使用mysql数据库
 mysql.driverClass = com.mysql.jdbc.Driver
-mysql.jdbcUrl = jdbc:mysql://127.0.0.1:3306/jxtest?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+mysql.jdbcUrl = jdbc:mysql://127.0.0.1:3306/demo?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 mysql.userName = root
-mysql.passWord = jn1535
+mysql.passWord = 1234
 
 # 使用oracle数据库
 oracle.driverClass = oracle.jdbc.driver.OracleDriver
@@ -39,9 +39,9 @@ db2.userName = ADMINISTRATOR
 db2.passWord = 678789
 
 # 初始连接池大小、最小空闲连接数、最大活跃连接数
-db.initialSize = 50
+db.initialSize = 80
 db.minIdle = 50
-db.maxActive = 100
+db.maxActive = 150
 
 #############################	database	end	###########################################
 
