--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,11 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/view/platform/module/tree.html=UTF-8
+encoding//WebContent/WEB-INF/view/platform/partner/add.html=UTF-8
 encoding//WebContent/ui/rapido/assets/plugins/jQuery-File-Upload/server/gae-python/main.py=utf-8
 encoding//platform/beetl.properties=UTF-8
+encoding//platform/com/platform/message_zh_CN.properties=ISO-8859-1
 encoding//platform/init.properties=UTF-8
 encoding//platform/log4j.properties=UTF-8
 encoding//platform/message_ja.properties=UTF-8
+encoding//platform/message_zh_CN.properties=ISO-8859-1
+encoding/<project>=UTF-8
