Signed-off-by: jsonHello <zuo1rui@163.com> 已完成第一初级版本功能

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -27,7 +27,9 @@ encoding//WebContent/WEB-INF/view/platform/partnertrade/update.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/partnertrade/view.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/payflow/list.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/payflow/view.html=UTF-8
+encoding//WebContent/WEB-INF/view/platform/payinfoconfig/add.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/payinfoconfig/list.html=UTF-8
+encoding//WebContent/WEB-INF/view/platform/payinfoconfig/update.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/pushinfosettings/add.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/pushinfosettings/list.html=UTF-8
 encoding//WebContent/WEB-INF/view/platform/scorelog/list.html=UTF-8
