--- a/platform/fileUpload.properties
+++ b/platform/fileUpload.properties
@@ -1,7 +1,7 @@
 # Server test environment
 #startImg.upload.path=/data/wwwroot/jx.jn1535.com/tempImg/startImg/
 #goodsImg.upload.path=/data/wwwroot/jx.jn1535.com/tempImg/goodsImg/
-#homeTopFloat.upload.path=/data/wwwroot/jx.jn1535.com/tempImg/
+#homeTopFloat.upload.path=/data/wwwroot/jx.jn1535.com/tempImg/.uy7h
 
 # local
 startImg.upload.path=f:\\temp\\startimg\\
