1、发现页首页的文章数据分页错误 2、广告图数据库存全地址 3、新增广告图远程获取地址 4、本地图片用完之后删除

--- a/platform/ossClient.properties
+++ b/platform/ossClient.properties
@@ -16,3 +16,5 @@ bucket.name.default=manggoooo
 fm.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/audio/imgs/
 #音频文件
 fm.file.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/audio/files/
+#广告图片文件
+ad.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/images/ad/
