--- a/platform/fileUpload.properties
+++ b/platform/fileUpload.properties
@@ -7,6 +7,10 @@
 startImg.upload.path=d:\\temp\\startimg\\
 homeTopFloat.upload.path=d:\\temp\\
 goodsImg.upload.path=d:\\temp\\startimg\\goodsImg\\
+startImg.upload.remote.path=images/startImg/
+homeTopFloat.upload.remote.path=images/homeTopFloat/
+
+
 //APP内广告图
 adImg.upload.path=D:\\img\\ad\\
 adImg.upload.remote.path=images/ad/
