--- a/platform/ossClient.properties
+++ b/platform/ossClient.properties
@@ -18,3 +18,7 @@ fm.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/audio/imgs/
 fm.file.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/audio/files/
 #广告图片文件
 ad.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/images/ad/
+#启动图文件
+start.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/images/startImg/
+#轮播图文件
+homeTopFloat.img.get.remoteUrl=https://manggoooo.oss-cn-shanghai.aliyuncs.com/images/homeTopFloat/
