--- a/platform/sys.properties
+++ b/platform/sys.properties
@@ -4,6 +4,6 @@
 #homeTopFloat.upload.path=/data/wwwroot/jx.jn1535.com/tempImg/
 
 # local
-https.url=https://apptest.juxiuclub.com/
+https.url=https://three.juxiuclub.com/
 http.url=http://jx.jn1535.com/
 
